base content added. Nav/Main/Footer.

--- a/index.html
+++ b/index.html
@@ -1,21 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+      integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+      crossorigin="anonymous"
+    />
     <title>James Holding Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Nav Bar -->
-    <nav class="navbar navbar-light bg-light">
-        <a class="navbar-brand">James Holding</a>
-        <form class="form-inline">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-        </form>
+      <nav class="navbar navbar-light bg-light">
+        <div class="container">
+          <a class="navbar-brand">James Holding</a>
+          <form class="form-inline">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#navbarToggleExternalContent"
+              aria-controls="navbarToggleExternalContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+          </form>
+        </div>
       </nav>
-    
-</body>
+    <!-- Main Content  -->
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                <h2>About Me</h2>
+            </div>
+            <div class="card-body">
+                <div class="row">
+                    <div class="clearfix">
+                        <img class="img img-thumbnail" src="http://placehold.it/200x200" alt="Image of James Holding">
+                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, illum molestias. Ex officia ullam consequatur quibusdam dolorum unde molestias nostrum nisi culpa? Eos ad accusamus dicta, reiciendis quasi numquam sequi.slorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae officiis cumque ratione. Nostrum id nihil vel at, accusamus eaque beatae animi est praesentium! Placeat fugit temporibus voluptates dolorum ad accusantium. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias quos repellendus, ratione sed consequuntur iste odio quaerat vero quod, debitis tenetur inventore, mollitia reprehenderit provident iure quis illum magnam accusamues.
+                      </p>
+                    </div>
+                </div>
+            </div>
+          </div>
+    </div>
+    </main>
+        <footer>
+            <div class="container">
+                <div class="footer-copyright text-center py-3">© Copyright
+                </div>
+            </div>
+        </footer>
+    </body>
 </html>
