--- a/index.html
+++ b/index.html
@@ -16,47 +16,82 @@
   </head>
   <body>
     <!-- Nav Bar -->
-      <nav class="navbar navbar-light bg-light">
-        <div class="container">
-          <a class="navbar-brand">James Holding</a>
-          <form class="form-inline">
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-toggle="collapse"
-              data-target="#navbarToggleExternalContent"
-              aria-controls="navbarToggleExternalContent"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-          </form>
-        </div>
-      </nav>
+    <nav class="navbar navbar-light bg-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">James Holding</a>
+        <form class="form-inline">
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarToggleExternalContent"
+            aria-controls="navbarToggleExternalContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </form>
+      </div>
+    </nav>
     <!-- Main Content  -->
-    <div class="container">
+    <main>
+      <div class="container">
         <div class="card">
-            <div class="card-header">
-                <h2>About Me</h2>
-            </div>
-            <div class="card-body">
-                <div class="row">
-                    <div class="clearfix">
-                        <img class="img img-thumbnail" src="http://placehold.it/200x200" alt="Image of James Holding">
-                      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, illum molestias. Ex officia ullam consequatur quibusdam dolorum unde molestias nostrum nisi culpa? Eos ad accusamus dicta, reiciendis quasi numquam sequi.slorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae officiis cumque ratione. Nostrum id nihil vel at, accusamus eaque beatae animi est praesentium! Placeat fugit temporibus voluptates dolorum ad accusantium. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestias quos repellendus, ratione sed consequuntur iste odio quaerat vero quod, debitis tenetur inventore, mollitia reprehenderit provident iure quis illum magnam accusamues.
-                      </p>
-                    </div>
-                </div>
+          <div class="card-header">
+            <h2>About Me</h2>
+          </div>
+          <div class="card-body">
+            <div class="row">
+              <img
+                class="img img-thumbnail"
+                src="http://placehold.it/200x200"
+                alt="Image of James Holding"
+              />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Dolorem, illum molestias. Ex officia ullam
+                consequatur quibusdam dolorum unde molestias nostrum
+                nisi culpa? Eos ad accusamus dicta, reiciendis quasi
+                numquam sequi.slorem Lorem ipsum dolor sit amet
+                consectetur adipisicing elit. Recusandae officiis
+                cumque ratione. Nostrum id nihil vel at, accusamus
+                eaque beatae animi est praesentium! Placeat fugit
+                temporibus voluptates dolorum ad accusantium. Lorem
+                ipsum dolor, sit amet consectetur adipisicing elit.
+                Molestias quos repellendus, ratione sed consequuntur
+                iste odio quaerat vero quod, debitis tenetur
+                inventore, mollitia reprehenderit provident iure quis
+                illum magnam accusamues. Lorem ipsum dolor sit amet
+                consectetur, adipisicing elit. Quo fuga vel
+                consectetur a nulla commodi aperiam eaque? Odio harum,
+                in iste consequatur aperiam qui, voluptate neque
+                quidem placeat molestiae. Lorem, ipsum dolor sit amet
+                consectetur adipisicing elit. Itaque, modi veritatis,
+                culpa corporis molestias hic, doloremque neque commodi
+                eum temporibus illum fugit provident repellendus vero
+                quisquam magni omnis. Aliquid, fugiat! Lorem ipsum
+                dolor sit amet, consectetur adipisicing elit. Facere
+                numquam tempora saepe quae iure id perspiciatis qui,
+                rem recusandae sunt reiciendis fugiat sed possimus
+                dolor. Aspernatur commodi pariatur unde expedita!
+                Lorem ipsum dolor sit, amet consectetur adipisicing
+                elit. Error voluptatum id asperiores nostrum dolores
+                libero. Exercitationem atque neque enim blanditiis
+                eligendi, nihil voluptates omnis, quis reiciendis
+                harum facere error rem!
+              </p>
             </div>
           </div>
-    </div>
+        </div>
+      </div>
     </main>
-        <footer>
-            <div class="container">
-                <div class="footer-copyright text-center py-3">© Copyright
-                </div>
-            </div>
-        </footer>
-    </body>
+    <footer>
+      <div class="container">
+        <div class="footer-copyright text-center py-3">
+          © Copyright
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
