--- a/portfolio.html
+++ b/portfolio.html
@@ -39,47 +39,27 @@
       <div class="container">
         <div class="card">
           <div class="card-header">
-            <h2>Contact</h2>
+            <h2>Portfolio</h2>
           </div>
           <div class="card-body">
             <div class="row">
-                <!-- Form Body  -->
-              <form>
-                  <!-- Name  -->
-                <div class="form-group">
-                  <label for="FormControlInput1">Name</label>
-                  <input
-                    type="name"
-                    class="form-control"
-                    id="FormControlInput1"
-                    placeholder="Name"
-                  />
-                </div>
-                <!-- Email  -->
-                <div class="form-group">
-                  <label for="FormControlInput2">Email</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="FormControlInput2"
-                    placeholder="Email"
-                  />
-                </div>
-                <!-- Message  -->
-                <div class="form-group">
-                  <label for="FormControlTextarea1">Message</label>
-                  <textarea
-                    class="form-control"
-                    id="FormControlTextarea1"
-                    rows="3"
-                  ></textarea>
-                  <!-- Submit Button  -->
-                  <br>
-                  <button type="submit" class="btn btn-primary">
-                    Submit
-                  </button>
-                </div>
-              </form>
+              <img
+                class="img img-thumbnail"
+                src="http://placehold.it/350x350"
+                alt="place holder"
+              />
+              <br />
+              <img
+                class="img img-thumbnail"
+                src="http://placehold.it/350x350"
+                alt="place holder"
+              />
+              <br />
+              <img
+                class="img img-thumbnail"
+                src="http://placehold.it/350x350"
+                alt="place holder"
+              />
             </div>
           </div>
         </div>
