Images as links/image responsive index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="card-body">
             <div class="row">
               <img
-                class="img img-thumbnail"
+                class="img img-responsive"
                 src="http://placehold.it/200x200"
                 alt="Image of James Holding"
               />
