--- a/portfolio.html
+++ b/portfolio.html
@@ -43,23 +43,47 @@
           </div>
           <div class="card-body">
             <div class="row">
-              <img
-                class="img img-thumbnail"
-                src="http://placehold.it/350x350"
-                alt="place holder"
-              />
+              <a
+                href="https://getbootstrap.com/docs/4.1/components/card/"
+                target="_blank"
+              >
+                <img
+                  class="img img-thumbnail"
+                  src="http://placehold.it/350x350"
+                  alt="place holder"
+                  a
+                  href="https://getbootstrap.com/docs/4.1/components/card/"
+                  target="_blank"
+                />
+              </a>
               <br />
-              <img
-                class="img img-thumbnail"
-                src="http://placehold.it/350x350"
-                alt="place holder"
-              />
+              <a
+                href="https://getbootstrap.com/docs/4.1/components/card/"
+                target="_blank"
+              >
+                <img
+                  class="img img-thumbnail"
+                  src="http://placehold.it/350x350"
+                  alt="place holder"
+                  a
+                  href="https://getbootstrap.com/docs/4.1/components/card/"
+                  target="_blank"
+                />
+              </a>
               <br />
-              <img
-                class="img img-thumbnail"
-                src="http://placehold.it/350x350"
-                alt="place holder"
-              />
+              <a
+                href="https://getbootstrap.com/docs/4.1/components/card/"
+                target="_blank"
+              >
+                <img
+                  class="img img-thumbnail"
+                  src="http://placehold.it/350x350"
+                  alt="place holder"
+                  a
+                  href="https://getbootstrap.com/docs/4.1/components/card/"
+                  target="_blank"
+                />
+              </a>
             </div>
           </div>
         </div>
