Assets folder addition.

--- a/portfolio.html
+++ b/portfolio.html
@@ -36,8 +36,9 @@
     </nav>
     <!-- Main Content  -->
     <main>
-      <div class="container">
+      <div class="container mt-5">
         <div class="card">
+          <!-- Maybe not a card - doesnt seem responsive -->
           <div class="card-header">
             <h2>Portfolio</h2>
           </div>
