--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     </nav>
     <!-- Main Content  -->
     <main>
-      <div class="container">
+      <div class="container mt-5">
         <div class="card">
           <div class="card-header">
             <h2>Contact</h2>
