--- a/index.html
+++ b/index.html
@@ -36,51 +36,52 @@
     </nav>
     <!-- Main Content  -->
     <main>
-      <div class="container">
+      <!-- fix margin get rid of card google how to add margin/padding bootstrap. -->
+      <div class="container mt-5">
         <div class="card">
-          <div class="card-header">
+          <div class="page-header">
             <h2>About Me</h2>
           </div>
           <div class="card-body">
             <div class="row">
-              <img
-                class="img img-responsive"
-                src="http://placehold.it/200x200"
-                alt="Image of James Holding"
-              />
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Dolorem, illum molestias. Ex officia ullam
-                consequatur quibusdam dolorum unde molestias nostrum
-                nisi culpa? Eos ad accusamus dicta, reiciendis quasi
-                numquam sequi.slorem Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Recusandae officiis
-                cumque ratione. Nostrum id nihil vel at, accusamus
-                eaque beatae animi est praesentium! Placeat fugit
-                temporibus voluptates dolorum ad accusantium. Lorem
-                ipsum dolor, sit amet consectetur adipisicing elit.
-                Molestias quos repellendus, ratione sed consequuntur
-                iste odio quaerat vero quod, debitis tenetur
-                inventore, mollitia reprehenderit provident iure quis
-                illum magnam accusamues. Lorem ipsum dolor sit amet
-                consectetur, adipisicing elit. Quo fuga vel
-                consectetur a nulla commodi aperiam eaque? Odio harum,
-                in iste consequatur aperiam qui, voluptate neque
-                quidem placeat molestiae. Lorem, ipsum dolor sit amet
-                consectetur adipisicing elit. Itaque, modi veritatis,
-                culpa corporis molestias hic, doloremque neque commodi
-                eum temporibus illum fugit provident repellendus vero
-                quisquam magni omnis. Aliquid, fugiat! Lorem ipsum
-                dolor sit amet, consectetur adipisicing elit. Facere
-                numquam tempora saepe quae iure id perspiciatis qui,
-                rem recusandae sunt reiciendis fugiat sed possimus
-                dolor. Aspernatur commodi pariatur unde expedita!
-                Lorem ipsum dolor sit, amet consectetur adipisicing
-                elit. Error voluptatum id asperiores nostrum dolores
-                libero. Exercitationem atque neque enim blanditiis
-                eligendi, nihil voluptates omnis, quis reiciendis
-                harum facere error rem!
-              </p>
+                <img
+                  class="img img-thumbnail float-left"
+                  src="http://placehold.it/200x200"
+                  alt="Image of James Holding"
+                />
+                    Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Dolorem, illum molestias. Ex officia ullam
+                    consequatur quibusdam dolorum unde molestias nostrum
+                    nisi culpa? Eos ad accusamus dicta, reiciendis quasi
+                    numquam sequi.slorem Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Recusandae officiis
+                    cumque ratione. Nostrum id nihil vel at, accusamus
+                    eaque beatae animi est praesentium! Placeat fugit
+                    temporibus voluptates dolorum ad accusantium. Lorem
+                    ipsum dolor, sit amet consectetur adipisicing elit.
+                    Molestias quos repellendus, ratione sed consequuntur
+                    iste odio quaerat vero quod, debitis tenetur
+                    inventore, mollitia reprehenderit provident iure quis
+                    illum magnam accusamues. Lorem ipsum dolor sit amet
+                    consectetur, adipisicing elit. Quo fuga vel
+                    consectetur a nulla commodi aperiam eaque? Odio harum,
+                    in iste consequatur aperiam qui, voluptate neque
+                    quidem placeat molestiae. Lorem, ipsum dolor sit amet
+                    consectetur adipisicing elit. Itaque, modi veritatis,
+                    culpa corporis molestias hic, doloremque neque commodi
+                    eum temporibus illum fugit provident repellendus vero
+                    quisquam magni omnis. Aliquid, fugiat! Lorem ipsum
+                    dolor sit amet, consectetur adipisicing elit. Facere
+                    numquam tempora saepe quae iure id perspiciatis qui,
+                    rem recusandae sunt reiciendis fugiat sed possimus
+                    dolor. Aspernatur commodi pariatur unde expedita!
+                    Lorem ipsum dolor sit, amet consectetur adipisicing
+                    elit. Error voluptatum id asperiores nostrum dolores
+                    libero. Exercitationem atque neque enim blanditiis
+                    eligendi, nihil voluptates omnis, quis reiciendis
+                    harum facere error rem!
+                </p>
             </div>
           </div>
         </div>
