--- a/contact.html
+++ b/contact.html
@@ -38,62 +38,57 @@
       </div>
     </nav>
     <!-- Main Content  -->
-    <main>
-      <div class="container mt-5">
-        <div class="card">
-          <div class="card-header">
-            <h2>Contact</h2>
+    <main class="container col-md-4 mt-5">
+      <header class="pb-2 pt-2 mb-2 border-bottom">
+        <h2>Contact</h2>
+      </header>
+      <section class="row">
+        <!-- Form  -->
+        <form class="ml-4">
+          <!-- Name  -->
+          <div class="form-group">
+            <label for="FormControlInput1">Name</label>
+            <input
+              type="name"
+              class="form-control"
+              id="FormControlInput1"
+              placeholder="Name"
+            />
           </div>
-          <div class="card-body">
-            <div class="row">
-                <!-- Form Body  -->
-              <form>
-                  <!-- Name  -->
-                <div class="form-group">
-                  <label for="FormControlInput1">Name</label>
-                  <input
-                    type="name"
-                    class="form-control"
-                    id="FormControlInput1"
-                    placeholder="Name"
-                  />
-                </div>
-                <!-- Email  -->
-                <div class="form-group">
-                  <label for="FormControlInput2">Email</label>
-                  <input
-                    type="email"
-                    class="form-control"
-                    id="FormControlInput2"
-                    placeholder="Email"
-                  />
-                </div>
-                <!-- Message  -->
-                <div class="form-group">
-                  <label for="FormControlTextarea1">Message</label>
-                  <textarea
-                    class="form-control"
-                    id="FormControlTextarea1"
-                    rows="3"
-                  ></textarea>
-                  <!-- Submit Button  -->
-                  <br>
-                  <button type="submit" class="btn btn-primary">
-                    Submit
-                  </button>
-                </div>
-              </form>
-            </div>
+          <!-- Email  -->
+          <div class="form-group">
+            <label for="FormControlInput2">Email</label>
+            <input
+              type="email"
+              class="form-control"
+              id="FormControlInput2"
+              placeholder="Email"
+            />
           </div>
-        </div>
-      </div>
+          <!-- Message  -->
+          <div class="form-group">
+            <label for="FormControlTextarea1">Message</label>
+            <textarea
+              class="form-control"
+              id="FormControlTextarea1"
+              placeholder="Message"
+              rows="3"
+            ></textarea>
+            <!-- Submit Button  -->
+            <br />
+            <button type="submit" class="btn btn-primary">
+              Submit
+            </button>
+          </div>
+        </form>
+      </section>
+      <!-- Form Body  -->
     </main>
     <footer>
-      <div class="container">
-        <div class="footer-copyright text-center py-3">
-          © Copyright
-        </div>
-      </div>
+      <!-- Footer  -->
+    <footer class="footer-copyright text-center py-3">
+      © Copyright
+    </footer>
     </footer>
   </body>
 </html>
