--- a/portfolio.html
+++ b/portfolio.html
@@ -6,18 +6,21 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
+    <!-- bootstrap  -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
+    <!-- style.css  -->
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>James Holding Portfolio</title>
   </head>
   <body>
     <!-- Nav Bar -->
     <nav class="navbar navbar-light bg-light">
-      <div class="container">
+      <div class="container col-md-8">
         <a class="navbar-brand" href="#">James Holding</a>
         <form class="form-inline">
           <button
@@ -90,12 +93,8 @@
         </div>
       </div>
     </main>
-    <footer>
-      <div class="container">
-        <div class="footer-copyright text-center py-3">
-          © Copyright
-        </div>
-      </div>
+    <footer class="footer-copyright text-center py-3">
+      © Copyright
     </footer>
   </body>
 </html>
