--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
     <!-- Nav Bar -->
     <nav class="navbar navbar-light bg-light">
       <div class="container col-md-8">
-        <a class="navbar-brand" href="#">James Holding</a>
+        <a class="navbar-brand" href="index.html">James Holding</a>
         <form class="form-inline">
           <button
             class="navbar-toggler"
