portfolio container update.

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,62 +51,86 @@
       </div>
     </nav>
     <!-- Main Content  -->
-    <main>
-      <div class="container mt-5">
-        <div class="card">
-          <!-- Maybe not a card - doesnt seem responsive -->
-          <div class="card-header">
-            <h2>Portfolio</h2>
-          </div>
-          <div class="card-body">
-            <div class="row">
-              <a
+    <main
+      class="container col-6 mt-5">
+      <header class="pb-2 pt-2 mb-2 border-bottom">
+        <h2>Portfolio</h2>
+      </header>
+      <section class="row">
+        <div class="col-md-6 pt-2">
+          <a
                 href="https://getbootstrap.com/docs/4.1/components/card/"
                 target="_blank"
               >
                 <img
-                  class="img img-thumbnail"
+                  class="img img-fluid"
                   src="http://placehold.it/350x350"
                   alt="place holder"
                   a
                   href="https://getbootstrap.com/docs/4.1/components/card/"
                   target="_blank"
                 />
-              </a>
-              <br />
-              <a
-                href="https://getbootstrap.com/docs/4.1/components/card/"
-                target="_blank"
-              >
-                <img
-                  class="img img-thumbnail"
-                  src="http://placehold.it/350x350"
-                  alt="place holder"
-                  a
-                  href="https://getbootstrap.com/docs/4.1/components/card/"
-                  target="_blank"
-                />
-              </a>
-              <br />
-              <a
-                href="https://getbootstrap.com/docs/4.1/components/card/"
-                target="_blank"
-              >
-                <img
-                  class="img img-thumbnail"
-                  src="http://placehold.it/350x350"
-                  alt="place holder"
-                  a
-                  href="https://getbootstrap.com/docs/4.1/components/card/"
-                  target="_blank"
-                />
-              </a>
-            </div>
-          </div>
         </div>
+        <div class="col-md-6 pt-2">
+          <a
+                href="https://getbootstrap.com/docs/4.1/components/card/"
+                target="_blank"
+              >
+                <img
+                  class="img img-fluid"
+                  src="http://placehold.it/350x350"
+                  alt="place holder"
+                  a
+                  href="https://getbootstrap.com/docs/4.1/components/card/"
+                  target="_blank"
+                />
+        </div>
+        <div class="col-md-6 pt-2">
+          <a
+                href="https://getbootstrap.com/docs/4.1/components/card/"
+                target="_blank"
+              >
+                <img
+                  class="img img-fluid py-3"
+                  src="http://placehold.it/350x350"
+                  alt="place holder"
+                  a
+                  href="https://getbootstrap.com/docs/4.1/components/card/"
+                  target="_blank"
+                />
+        </div>
+        <div class="col-md-6 pt-2">
+          <a
+                href="https://getbootstrap.com/docs/4.1/components/card/"
+                target="_blank"
+              >
+                <img
+                  class="img img-fluid py-3"
+                  src="http://placehold.it/350x350"
+                  alt="place holder"
+                  a
+                  href="https://getbootstrap.com/docs/4.1/components/card/"
+                  target="_blank"
+                />
+        </div>
+        <div class="col-md-6 pt-2">
+          <a
+                href="https://getbootstrap.com/docs/4.1/components/card/"
+                target="_blank"
+              >
+                <img
+                  class="img img-fluid py-3"
+                  src="http://placehold.it/350x350"
+                  alt="place holder"
+                  a
+                  href="https://getbootstrap.com/docs/4.1/components/card/"
+                  target="_blank"
+                />
+        </div>
+      </section>
       </div>
     </main>
-    <footer class="footer-copyright text-center py-3">
+    <footer class="footer-copyright text-center py-2">
       © Copyright
     </footer>
     <script
