contact page updates.

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
       </div>
     </nav>
     <!-- Main Content  -->
-    <main class="container col-md-4 mt-5">
+    <main class="container col-7 mt-5">
       <header class="pb-2 pt-2 mb-2 border-bottom">
         <h2>Contact</h2>
       </header>
