update comments in css.

--- a/contact.html
+++ b/contact.html
@@ -95,7 +95,6 @@
           </div>
         </form>
       </section>
-      <!-- Form Body  -->
     </main>
     <footer>
       <!-- Footer  -->
@@ -103,6 +102,7 @@
         © Copyright
       </footer>
     </footer>
+    <!-- Bootsrap JS and Jquery  -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
