--- a/index.html
+++ b/index.html
@@ -62,20 +62,7 @@
             src="assets/images/headshot.png"
             alt="Image of James Holding"
           />
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Dolorem, illum molestias. Ex officia ullam consequatur
-          quibusdam dolorum unde molestias nostrum nisi culpa? Eos ad
-          accusamus dicta, reiciendis quasi numquam sequi.slorem Lorem
-          ipsum dolor sit amet consectetur adipisicing elit.
-          Recusandae officiis cumque ratione. Nostrum id nihil vel at,
-          accusamus eaque beatae animi est praesentium! Placeat fugit
-          temporibus voluptates dolorum ad accusantium. Lorem ipsum
-          dolor, sit amet consectetur adipisicing elit. Molestias quos
-          repellendus, ratione sed consequuntur iste odio quaerat vero
-          quod, debitis tenetur inventore, mollitia reprehenderit
-          provident iure quis illum magnam accusamues. Lorem ipsum
-          dolor sit amet consectetur, adipisicing elit. Quo fuga vel
-          consectetur a nulla commodi aperiam eaque? Odio harum
+          Hi! I'm James and a little about me. I was born and raised in the Florida Keys. Following graduation from high school I enlisted in the United States Marine Corps. I served on two overseas deploymenets supporting Operation Enduring Freedom in places such as, Afghanistan and West Africa. After being honorably discharded, I enrolled at the University of Miami to study Economics and Entrenprenuership. Graduating in 2017, I felt I needed a change of scenery and moved to Atlanta GA and have been here since. My work experience so far has been in software as an Implementation Specialist and are currently an Senior Application Development Analyst for Accenture llc. and also enrolled in the Georgia Tech Full-Stack Coding Bootcamp. I'm into the usual outdoor activities and are always looking for a new challenge/adventure!
         </p>
       </section>
     </main>
@@ -83,6 +70,7 @@
     <footer class="footer-copyright text-center py-2">
       © Copyright
     </footer>
+    <!-- Bootsrap JS and Jquery  -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
