--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
                 <img
                   class="img img-fluid py-3"
                   src="assets/images/alien-invaders.png"
-                  alt="place holder"
+                  alt="Alien Invaders Image"
                   a
                   href="https://github.com/jmh129/Alien_Invaders"
                   target="_blank"
@@ -93,7 +93,7 @@
                 <img
                   class="img img-fluid py-3"
                   src="http://www.fillmurray.com/300/200"
-                  alt="place holder"
+                  alt="Fill Murray"
                   a
                   href="https://www.fillmurray.com/"
                   target="_blank"
@@ -107,7 +107,7 @@
                 <img
                   class="img img-fluid py-3"
                   src="http://www.fillmurray.com/284/196"
-                  alt="place holder"
+                  alt="Another Fill Murray"
                   a
                   href="https://www.fillmurray.com/"
                   target="_blank"
@@ -121,7 +121,7 @@
                 <img
                   class="img img-fluid py-3"
                   src="https://placekitten.com/200/139"
-                  alt="place holder"
+                  alt="A Kitten"
                   a
                   href="https://placekitten.com/"
                   target="_blank"
@@ -133,6 +133,7 @@
     <footer class="footer-copyright text-center py-2">
       © Copyright
     </footer>
+    <!-- Bootsrap JS and Jquery  -->
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
