update to index.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,21 @@
             src="assets/images/headshot.png"
             alt="Image of James Holding"
           />
-          Hi! I'm James and a little about me. I was born and raised in the Florida Keys. Following graduation from high school I enlisted in the United States Marine Corps. I served on two overseas deploymenets supporting Operation Enduring Freedom in places such as, Afghanistan and West Africa. After being honorably discharded, I enrolled at the University of Miami to study Economics and Entrenprenuership. Graduating in 2017, I felt I needed a change of scenery and moved to Atlanta GA and have been here since. My work experience so far has been in software as an Implementation Specialist and are currently an Senior Application Development Analyst for Accenture llc. and also enrolled in the Georgia Tech Full-Stack Coding Bootcamp. I'm into the usual outdoor activities and are always looking for a new challenge/adventure!
+          Hi! I'm James and a little about me. I was born and raised
+          in the Florida Keys. Following graduation from high school I
+          enlisted in the United States Marine Corps. I served on two
+          overseas deploymenets supporting Operation Enduring Freedom
+          in places such as, Afghanistan and West Africa. After being
+          honorably discharded, I enrolled at the University of Miami
+          to study Economics and Entrenprenuership. Graduating in
+          2017, I felt I needed a change of scenery and moved to
+          Atlanta GA and have been here since. My work experience so
+          far has been in software as an Implementation Specialist and
+          are currently an Senior Application Development Analyst for
+          Accenture llc. and also enrolled in the Georgia Tech
+          Full-Stack Coding Bootcamp. I'm into the usual outdoor
+          activities and are always looking for a new
+          challenge/adventure!
         </p>
       </section>
     </main>
