--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
     <!-- style.css  -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href=".assets/css/style.css" />
     <title>James Holding Portfolio</title>
   </head>
   <body>
