update to image link.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
     <!-- style.css  -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>James Holding Portfolio</title>
   </head>
   <body>
@@ -59,7 +59,7 @@
         <p>
           <img
             class="img img-thumbnail float-left"
-            src="assets/images/headshot.png"
+            src="./assets/images/headshot.png"
             alt="Image of James Holding"
           />
           Hi! I'm James and a little about me. I was born and raised
