update to image links and css.

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
       crossorigin="anonymous"
     />
     <!-- style.css  -->
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>James Holding Portfolio</title>
   </head>
   <body>
@@ -64,7 +64,7 @@
               >
                 <img
                   class="img img-fluid py-3"
-                  src="assets/images/horiseon.png"
+                  src="./assets/images/horiseon.png"
                   alt="Accessibility Project"
                   a
                   href="https://getbootstrap.com/docs/4.1/components/card/"
@@ -78,7 +78,7 @@
               >
                 <img
                   class="img img-fluid py-3"
-                  src="assets/images/alien-invaders.png"
+                  src="./assets/images/alien-invaders.png"
                   alt="Alien Invaders Image"
                   a
                   href="https://github.com/jmh129/Alien_Invaders"
