section to div.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <header class="pb-2 pt-2 mb-2 border-bottom">
         <h2>About Me</h2>
       </header>
-      <section class="row">
+      <div class="row">
         <p>
           <img
             class="img img-thumbnail float-left"
@@ -78,7 +78,7 @@
           activities and are always looking for a new
           challenge/adventure!
         </p>
-      </section>
+      </div>
     </main>
     <!-- Footer  -->
     <footer class="footer-copyright text-center py-2">
