section to div.

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
       <header class="pb-2 pt-2 mb-2 border-bottom">
         <h2>Contact</h2>
       </header>
-      <section class="row">
+      <div class="row">
         <!-- Form  -->
         <form class="ml-4">
           <!-- Name  -->
@@ -94,7 +94,7 @@
             </button>
           </div>
         </form>
-      </section>
+      </div>
     </main>
     <footer>
       <!-- Footer  -->
