--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
       <header class="pb-2 pt-2 mb-2 border-bottom">
         <h2>Portfolio</h2>
       </header>
-      <section class="row">
+      <div class="row">
         <div class="col-md-6 pt-2">
           <a
                 href="https://jmh129.github.io/gt-accessibility-html/"
@@ -127,7 +127,7 @@
                   target="_blank"
                 />
         </div>
-      </section>
+      </div>
       </div>
     </main>
     <footer class="footer-copyright text-center py-2">
