--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
           honorably discharded, I enrolled at the University of Miami
           to study Economics and Entrenprenuership. Graduating in
           2017, I felt I needed a change of scenery and moved to
-          Atlanta GA and have been here since. My work experience so
+          Atlanta Ga, and have been here since. My work experience so
           far has been in software as an Implementation Specialist and
           are currently an Senior Application Development Analyst for
           Accenture llc. and also enrolled in the Georgia Tech
           Full-Stack Coding Bootcamp. I'm into the usual outdoor
-          activities and are always looking for a new
+          activities and am always looking for a new
           challenge/adventure!
         </p>
       </div>
