--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           are currently an Senior Application Development Analyst for
           Accenture llc. and also enrolled in the Georgia Tech
           Full-Stack Coding Bootcamp. I'm into the usual outdoor
-          activities and am always looking for a new
+          activities and always looking for a new
           challenge/adventure!
         </p>
       </div>
